# structured-p2p-overlay-network

./: .gitignore  README.md  evaluation-plan.md  paper-plan.md  protocol_pseudo.txt  protocol_pseudo_code.txt
adapter/: peer.go  protocol.go  server.go
experiments/: eos_hgfr_e2e_tps_on_input.py  eos_hgfr_e2e_tps_on_input.txt  eos_hgfr_micro_tps_on_input.py  eos_hgfr_micro_tps_on_input.txt  eth_ourgossip_cvgtime_on_num_node.py  eth_ourgossip_cvgtime_on_num_node.txt  eth_ourgossip_num_msg_on_num_node.py  eth_ourgossip_num_msg_on_num_node.txt  eth_ourgossip_num_msg_on_time.py  eth_ourgossip_num_msg_on_time.txt  hgfr_ourgossip_50cvgtime_on_num_nodes.txt  hgfr_ourgossip_67cvgtime_on_num_nodes.txt  hgfr_ourgossip_83cvgtime_on_num_nodes.txt  hgfr_ourgossip_95cvgtime_on_num_nodes.txt  hgfr_ourgossip_cvgtime_on_num_nodes.py  hgfr_ourgossip_cvgtime_on_tps.py  hgfr_ourgossip_cvgtime_on_tps_2k.py  hgfr_ourgossip_cvgtime_on_tps_6k.py  hgfr_ourgossip_fault.py  hgfr_ourgossip_fault.txt  hgfr_ourgossip_num_msg_on_num_node.py  hgfr_ourgossip_num_msg_on_num_node.txt  hgfr_ourgossip_num_msg_on_tps.py
experiments/deprecated/: hgfr_ourgossip_50cvgtime_on_num_nodes.py  hgfr_ourgossip_67cvgtime_on_num_nodes.py  hgfr_ourgossip_83cvgtime_on_num_nodes.py  hgfr_ourgossip_95cvgtime_on_num_nodes.py
figures/: structure.pptx
geth-gfr/p2p/: peer.go  server.go
libgfrp2p/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-x64.bat  build.sh  protocol_pseudo_code.txt
libgfrp2p/deprecated/: tcp_test.cpp  transport.cpp
libgfrp2p/docker/: deploy.sh  docker-compose-client.yml  docker-compose-server.yml  docker-compose.yml  eval.sh  eval_eth.sh  num_msgs.sh  num_msgs_eth.sh  reset.sh  time_spent.sh  time_spent_eth.sh
libgfrp2p/docker/client/: Dockerfile
libgfrp2p/docker/server/: Dockerfile
libgfrp2p/docker/ubuntu/: Dockerfile
libgfrp2p/evaluation/include/: eval_client.h  eval_server.h  format.h  node_table_manager.h
libgfrp2p/evaluation/proto/: bootstrap_message.pb.cc  bootstrap_message.pb.h  bootstrap_message.proto
libgfrp2p/evaluation/src/: bootstrap.cpp  eval_client.cpp  eval_server.cpp  format.cpp
libgfrp2p/include/: app.h  app_eth.h  discovery.h  libgfrp2p.h  libgfrrp2p.h  message.h  node.h  node_table.h  node_table_eth.h  param_constants.h  peer_manager.h  peer_manager_eth.h  service.h  transport.h  utils.h
libgfrp2p/src/: .app_eth.cpp.swn  .app_eth.cpp.swp  app.cpp  app_eth.cpp  discovery.cpp  message.cpp  node.cpp  node_table.cpp  node_table_eth.cpp  peer_manager.cpp  peer_manager_eth.cpp  service.cpp  transport.cpp  utils.cpp
libgfrp2p/test/: bootstrap.sh  bootstrap_180.sh  bootstrap_40.sh  bootstrap_eth_10000.sh  bootstrap_eth_120.sh  bootstrap_eth_12000.sh  bootstrap_eth_160.sh  bootstrap_eth_180.sh  bootstrap_eth_200.sh  bootstrap_eth_2000.sh  bootstrap_eth_240.sh  bootstrap_eth_40.sh  bootstrap_eth_4000.sh  bootstrap_eth_6000.sh  bootstrap_eth_80.sh  bootstrap_eth_8000.sh  bootstrap_hgfrr_10000.sh  bootstrap_hgfrr_12000.sh  bootstrap_hgfrr_2000.sh  bootstrap_hgfrr_4000.sh  bootstrap_hgfrr_6000.sh  bootstrap_hgfrr_8000.sh  bootstrap_message.cpp  eval.sh  format.cpp  local_eval_client.sh  num_msgs.sh  reset_evaluation.sh  tcp.cpp  tcp_test.cpp  time_spent.sh  udp.cpp
paper-atc/paper-src/: .gitignore  README.md  abstract.tex  analysis.tex  background.tex  conclusion.tex  design.tex  eval.tex  implementation.tex  intro.tex  main.aux  main.bbl  main.bib  main.blg  main.dvi  main.out  main.tex  related.tex
paper-atc/paper-src/figures/: structure.pptx  test1.ps
paper-atc/templates/: usenix2019.sty  usenix2019_v2.tex
pydevp2p/: .coveragerc  .gitignore  .travis.yml
pydevp2p/devp2p/: crypto.py
pydevp2p/examples/: connection_strategy_simulator.py
